--- a/story.css
+++ b/story.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("/Image/1311017.jpg");
+    background-image: url("Image/1311017.jpg");
     background-color: black;
     background-repeat: no-repeat;
     background-position: -180vh -70vw;
