--- a/first.css
+++ b/first.css
@@ -1,6 +1,6 @@
 body{
     background-color:rgb(28, 36, 50);
-    background-image: url("/Image/wallpaperflare.com_wallpaper\ \(1).jpg");
+    background-image: url("Image/wallpaperflare.com_wallpaper\ \(1).jpg");
 }
 header img{
     height: 300px;
